# vk-dynamic

./: .github_update_cmake.py  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_and_compile_test.yaml  cleanup_sync_runs.yml  sync-upstream-release.yml
include/.github/workflows/: sync-upstream-release.yml
scripts/: github_update_cmake.py
src/: vk.cpp
